fix: 明示的にjava21を指定するコマンドを削除、pull.rebaseのコマンドを追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "postCreateCommand": "sdk use java 21.0.2-ms",
+    "postCreateCommand": "git config pull.rebase false",
     // Codespaces立ち上げ時に自動で記載の拡張機能をインストールする
     // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
     "customizations": {
